--- a/globals-html/style.css
+++ b/globals-html/style.css
@@ -11,36 +11,47 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(168, 143, 92);
-    height: 1000px
+    height: auto;
 }
 
-header img{
-    top:-45px;
-    left: 5px;
-    position: absolute;
-    width: 190px;
-    height: 190px;
+#logo{
+    width: 270px;
+    height: 78px;
+    display: flex;
+    flex-direction: row;
 }
 
-header h1{
+#logoImg{
+    position: relative;
+    width: auto;
+}
+
+#logoText{
     font-size:40px;
-    top: -15px;
-    left: 160px ;
+    width: 50%;
+    height: 75%;
+    top: -23px;
     color:#e57a0f;
     font-family:"logofont";
-    position: absolute;
+    position: relative;
 }
 
 
 header {
     background-color: rgb(0, 80, 0);
+    width: 100%;
     height: 75px;
     padding: 10px;
-    text-align: center;
+    display: inline-flex;
+}
+
+header nav{
+    position: relative;
+    left: 13%;
 }
 
 header nav ul li{
-    display: inline-block;
+    display: inline-flex;
     padding: 10px;
 }
 
@@ -60,11 +71,12 @@ header nav ul li a:hover{
 main{
     display: flex;
     height: 200%;
+    min-height: 600px;
 }
 
 
 
-
+/*Produtos*/
 
 #navLateral{
     width: 23%;
@@ -75,21 +87,6 @@ main{
     left: 2%;
 }
 
-#navLateral h1{
-    font-size: 20px;
-}
-
-#navLateral nav{
-
-}
-
-#navLateral nav ul{
-    
-}
-
-#navLateral nav ul li{
-    
-}
 
 #navLateral nav ul li a{
     text-transform: uppercase;
@@ -104,7 +101,7 @@ main{
 
 
 
-
+/*Vendedores*/
 
 #container-itens{
     position: relative;
@@ -135,27 +132,111 @@ main{
     padding: 10px;
     margin: 20px;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     transition: 0.25s;
     border: 1px solid white;
 
 }
 
 .vendedor:hover{
-    border: 1px solid black;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.vendedor div{
+    display: block;
 }
 
 .vendedor div a{
     text-decoration: none;
     color: black;
+    flex-wrap: wrap;
 }
 
 .vendedor div a img{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 180px;
 }
 
 
+
+/*Login*/
+
+#container-login{
+    width: 100%;
+}
+
+#caixa-login{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: antiquewhite;
+    padding: 5px;
+    min-width: 350px;
+    width: 25%;
+    height: auto;
+    color: black;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 16px 16px 32px rgba(0, 0, 0, 0.2);
+}
+
+#caixa-login h4{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+#form{
+    display: flex;
+    flex-direction: column;
+}
+
+#form p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    width:120px;
+    position: relative;
+    left: 11%;
+}
+
+.input-login{
+    display: inline-flex;
+    padding: 5px;
+}
+
+.escrever{
+    position: relative;
+    left: 8%;
+    width: 280px;
+    height: 25px;
+    border-color: rgb(230, 230, 230);
+    border: solid, 1px;
+    border-radius: 4px;
+}
+
+.sectionSubmit a{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.enviar input{
+    position: relative;
+    left: 25.5%;
+    border-radius:5px;
+    background-color: green;
+    color: rgb(226, 226, 226);
+    border: none;
+    height: 30px;
+    width: 150px;
+    margin: 10px;
+}
+
+.enviar input:hover{
+    background-color: rgb(5, 150, 5);
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
 
 
 
