--- a/globals-html/style.css
+++ b/globals-html/style.css
@@ -41,13 +41,12 @@ header {
     background-color: rgb(0, 80, 0);
     width: 100%;
     height: 75px;
-    padding: 10px;
     display: inline-flex;
 }
 
 header nav{
     position: relative;
-    left: 13%;
+    left: 18%;
 }
 
 header nav ul li{
@@ -70,8 +69,9 @@ header nav ul li a:hover{
 
 main{
     display: flex;
-    height: 200%;
+    height: auto;
     min-height: 600px;
+    max-width: 100%;
 }
 
 
@@ -158,6 +158,64 @@ main{
     width: 100%;
     height: 180px;
 }
+
+/*Servicos*/
+
+#container-full{
+    width: 100%;
+    height: auto;
+}
+
+#caixa-servicos{
+    background-color: #ddc4ab;
+    position: relative;
+    left: 10%;
+    width: 80%;
+    height: 100%;
+}
+
+#servicos{
+    padding: 10px;
+    height: auto;
+}
+
+#servicos div{
+    border-width: 0 0 1px 0;
+    border-color: black;
+    border-style: solid;
+    padding: 20px;
+}
+
+#servico div h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#servicos div p{
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-flex;
+    margin: 0;
+}
+
+/*Vendedor*/
+
+#container-vendedor{
+    background-color: #ddc4ab;
+    width: 100%;
+    height: auto;
+    min-height: 800px;
+    padding: 10px;
+    z-index: 2;
+}
+
+.imgVendedor{
+    width: 400px;
+    height: 400px;
+}
+
+#container-vendedor div div p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 
 
 
@@ -256,11 +314,14 @@ main{
 
 footer{
     color: white;
+    position: relative;
     background-color: rgb(0, 80, 0); ;
-    padding: 1px;
-    height: 100px;
+    height: 100%;
+    min-height:100px ;
+    width: 100%;
 }
 
 footer p{
+    position: relative;
     text-align: center;
 }
